# yatesi-mvp-monorepo

./: .deployignore  .gitignore  docker-compose.yaml  init.surql  justfile  keydb.conf  readme.md
converter/: .dockerignore  Cargo.toml  Dockerfile  build.rs
converter/proto/: converter_service.proto
converter/src/: config.rs  main.rs
converter/src/converter/: errors.rs  mod.rs  operations.rs  tgs.rs
converter/src/service/: converter.rs  mod.rs
dotcom/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
dotcom/src/app/: globals.css  layout.tsx  page.tsx
dotcom/src/components/layout/: navbar.tsx
dotcom/src/components/sections/: hero.tsx
dotcom/src/components/ui/: animated-counter.tsx  theme-toggle.tsx
dotcom/src/config/: env.ts
dotcom/src/lib/: actions.ts  websocket-server.ts
dotcom/src/lib/hooks/: useStatsData.ts  useWebSocketData.ts
dotcom/src/providers/: theme-provider.tsx
frontier/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
frontier/frontier/: __main__.py  config.py  database.py  scrapper.py  utils.py
infrastructure/: caddyfile
statserver/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
statserver/src/: cache.rs  config.rs  main.rs  updater.rs  websocket.rs
statserver/src/updater2/: cache.rs  database.rs  mod.rs  processor.rs  statistics.rs  stream.rs
