[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "converter-server"
path = "src/main.rs"

[dependencies]
flate2 = "1.0.35"
lottieconv = "0.3.0"
prost = "0.13.4"
serde = { version = "1.0.216", features = ["derive"] }
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.12.3"
