[package]
name = "statserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "statserver"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
redis = { version = "0.27.6", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
surrealdb = "2.1.4"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal"] }
toml = "0.8.19"
