[package]
name = "statserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "statserver"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
futures = "0.3.31"
humantime-serde = "1.1.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
redis = { version = "0.27.6", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
surrealdb = "2.1.4"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal"] }
tokio-tungstenite = "0.26.1"
toml = "0.8.19"
